--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      <li class="nav-item ">
+        <a class="btn active" href="index.html">Inicio </a>
+      </li>
       <li class="nav-item active">
-        <a class="btn btn-primary active" href="index.html">Inicio </a>
+        <a class="btn " href="Celavive.html">Celavive</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-primary" href="Celavive.html">Celavive</a>
-      </li>
-      <li class="nav-item">
-    <a class="btn btn-primary" href="Comprar.html">Comprar Ahora</a>
+    <a class="btn" href="Comprar.html">Comprar Ahora</a>
   </li>
   <li class="nav-item">
-<a class="btn btn-primary" href="Oportunidad.html">Oportunidad de Negocio</a>
+<a class="btn" href="Oportunidad.html">Oportunidad de Negocio</a>
   </li>
   <li class="nav-item">
-<a class="btn btn-primary" href="Contactame.html">Contactame</a>
+<a class="btn" href="Contactame.html">Contactame</a>
   </li>
       
     </ul>
