--- a/Contactame.html
+++ b/Contactame.html
@@ -101,7 +101,7 @@
 <br>
           <div class="col-12 text-center">
             
-           <FONT COLOR=WHITE FACE="optien" SIZE="200PX"><A HREF=https://esther1_salud.usana.com/pwp/#/site/71504394/page/45765501 target="_blank">CLIC AQUI</A></FONT>
+           <FONT COLOR=WHITE FACE="optien" SIZE="200PX"><A HREF=https://esther1_salud.usana.com/pwp/#/site/71504394/page/45765501 target="_blank">CLICK AQUI</A></FONT>
 <br>
 <br>
 
